Übung 08: CI Setup mit MongoDB und Auth0 Secrets